# resume-jd-matcher

./: .gitignore  .pre-commit-config.yaml  ModelFile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: app.py
data/: data.jsonl  data_sample.jsonl  jds.json  skill_aliases.json
examples/: sample_resume_backend.txt  sample_resume_data_ml.txt
src/: __init__.py  extract.py  jds.py  schema.py  score_embed.py  score_stub.py  skills.py
src/genai/: analyzer.py  llm.py  local_provider.py  postcheck.py  suggest.py
tests/: test_analyzer_postcheck.py  test_schema.py  test_score_stub.py  test_skills.py  test_suggest_mock.py  test_textnorm.py
